--- a/angular.json
+++ b/angular.json
@@ -65,6 +65,11 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "ssl": true,
+            "sslKey": "key.pem",
+            "sslCert": "cert.pem"
+          },
           "configurations": {
             "production": {
               "browserTarget": "CartMaster.UI:build:production"
@@ -102,5 +107,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": false
   }
 }
